--- a/gallery1.css
+++ b/gallery1.css
@@ -1,5 +1,8 @@
 .gallery1 {
     visibility: hidden;
+    position: relative;
+    margin-top: 10%;
+    margin-left: 35%;
 }
 
 .gallery1 .showGallery1 {
@@ -8,22 +11,37 @@
 
 .image-container {
     position: relative;
-    width: 10%;
-    height: 200px;
+    left: 105px;
+   width: 190px;
+   height: 200px;
     transform-style: preserve-3d;
     transform: perspective(1000px) rotateY(0deg);
-    transition: transform 3s;
-    left: 50%;
+    transition: transform 0.7s;
+    bottom: -29px;
   }
-  
+ 
   .image-container span {
     position: absolute;
-    top: 50%;
+    top: 0px;
     left: 0px;
-    width: 150px;
+    width: 100%;
     transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
   }
-  
+
+  @media (max-width: 950px) {
+    .image-container span {
+        transform: rotateY(calc(var(--i) * 45deg)) translateZ(300px);
+    }
+    
+  }
+
+  @media (max-width: 750px) {
+    .image-container span {
+        transform: rotateY(calc(var(--i) * 45deg)) translateZ(200px);
+    }
+    
+  }
+
   .image-container span img {
     position: absolute;
     left: 0;
