--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ body {
     font-size: 20px;
 }
   
-  /*Resize the wrap to see the search bar change!*/
 .wrap{
     width: 30%;
     position: absolute;
@@ -203,7 +202,7 @@ body {
 }
 
 .navbar a.active {
-    background-color: #04AA6D;
+    background-color: #3177b8;
     color: white;
 }
 
