--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    border-color: transparent transparent transparent transparent;
 }
 
 .popup .show {
